--- a/index.html
+++ b/index.html
@@ -69,40 +69,30 @@
         <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
         <p class="my-4">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            Profesional responsable, empática, creativa, con gran sentido de vocación. Habilidad de trabajo en equipo. Mejora de las capacidades, con alto compromiso en el logro de objetivos y resolución de problemas. Acreditada en la Superintendencia de Salud de Chile. Registro N° 4899 de Colegio de Nutricionistas Universitarios de Chile.
         </p>
 
 
         <div class="row">
             <div class="col-12 col-md-4">
-                <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <i class="fas fa-table fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold"> Etiquetado nutricional</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Consultoría y desarrollo de etiquetado nutricional según norma chilena. 
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <i class="fas fa-user-md fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Consulta nutricional </h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Atención nutricional integral. Plan de alimentación personalizado
                 </p>
             </div>
             <div class="col-12 col-md-4">
-                <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <i class="far fa-eye fa-3x my-3"></i>
+                <h3 class="my-3 fw-bold">Asesoría técnica</h3>
                 <p class="my-3">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                    ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                    Supervision norma técnica en industria alimentaria.BPM y HACCP 
                 </p>
             </div>
         </div>
