se modifica seccion mis trabajos por mis certificaciones, se cambian imagenes de card, y texto respectivo a las certificaciones

--- a/index.html
+++ b/index.html
@@ -101,19 +101,16 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis Certificaciones</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-1.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/psiconutricion.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Psicologia de la alimentación</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Explicabo iure sint, perspiciatis distinctio molestias nihil
-                            repudiandae neque rem adipisci repellendus libero illo quo
-                            blanditiis, velit quasi ad, recusandae voluptates officia.
+                            La alimentación y la nutrición, entre otros factores, son determinantes en el desarrollo biológico de los humanos; a través del tiempo, se ha demostrado que también son determinantes en el desarrollo psíquico y social de estos.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -123,14 +120,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-2.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/lactancia\ materna.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold"> Lactancia materna y alimentacion complementaria</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            La asesoría en lactancia materna consiste en realizar una historia clínica minuciosa con los antecedentes médicos, aspectos físicos y familiares que podrían estar ayudando o perjudicando el proceso de lactancia.  
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
@@ -140,14 +134,11 @@
             </div>
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
-                    <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
+                    <div class="image-top" style="background-image: url(assets/img/nutricion\ en\ geriatria.png)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Nutrición en geriatría</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            Enfoque nutricional integral centrado en el individuo, tanto para personas mayores sanas y robustas, como para aquellas con múltiples comorbilidades o frágiles.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
