se cambia texto de bloque de contacto

--- a/index.html
+++ b/index.html
@@ -156,11 +156,8 @@
 
         <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
-        <p class="text-center my-4 d-none d-md-block">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Doloribus
-            sapiente, autem delectus totam expedita
-            animi corporis dolorem qui magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate beatae
-            tempora quaerat?</p>
+        <p class="text-center my-4 d-none d-md-block"> Si necesita atención nutricional personalizada o esta buscando asesoría técnica para su empresa de alimentos, puede contactarme a traves del siguiente formulario. Le responderé a la brevedad. 
+           </p>
 
         <form>
 
