se agrega linkedin en footer y se modifica texto

--- a/index.html
+++ b/index.html
@@ -191,7 +191,8 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Claudia Gutiérrez - Nutricionista Dietista. Todos los derechos reservados. 2023</p>
+        <a href="http://https://www.linkedin.com/in/claudia-guti%C3%A9rrez-36a61a186/" target="_blank" rel="noopener noreferrer"> <i class="fab fa-linkedin" style="color: #ffffff;"></i> </a>
     </footer>
 
 
